# LMS-FastApi

./: main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 03654c880d59_add_certificate_models.py  467ccde9e214_add_module_table.py  47f07fb3d417_initial_migrations.py  5e0f75c95b79_add_quiz_and_progress_models_for_sprint_.py
app/: deps.py
app/core/: config.py  security.py
app/models/: __init__.py  certificate.py  course.py  module.py  quiz.py  user.py
app/routes/: analytics.py  auth.py  certificates.py  courses.py  modules.py  quizzes.py  users.py
app/schemas/: analytics.py  certificate.py  course.py  module.py  quiz.py  user.py
